# nanobanana

./: README.md  nanobanana.py  nbp.py  pyproject.toml
.github/workflows/: publish.yml
skills/nanobanana/: SKILL.md
skills/nanobanana-pro/: SKILL.md
skills/nanobanana-pro/scripts/: nbp.py
skills/nanobanana/scripts/: nanobanana.py
