[project]
name = "nanobanana"
version = "0.1.2"
description = "Nano Banana Pro - CLI for Gemini image generation"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yishen Tu" }]
keywords = ["nanobanana-pro", "gemini", "image-generation", "cli", "ai", "google"]
dependencies = [
    "google-genai>=1.65.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
]

[project.urls]
Repository = "https://github.com/YishenTu/nanobanana"

[project.scripts]
nanobanana = "nanobanana:main"

[tool.setuptools]
py-modules = ["nanobanana"]
