[project]
name = "bananagen"
version = "0.2.0"
description = "CLI for Gemini image generation"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yishen Tu" }]
keywords = ["bananagen", "nanobanana", "gemini", "image-generation", "cli", "ai", "google"]
dependencies = [
    "google-genai>=1.65.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
]

[project.urls]
Repository = "https://github.com/YishenTu/nanobanana"

[project.scripts]
nanobanana = "nanobanana:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["nanobanana"]
